--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ TELEGRAM_HASH = "1c8c0bcb55c14e0fd8078058966b6a11"
 BOT_TOKEN = "6230237564:AAHGbISTLn4dSUWsTM4Od_aPggpWvh_1qMQ"
 
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/Anything-bro/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
