--- a/config.env
+++ b/config.env
@@ -16,8 +16,8 @@ DATABASE_URL = "mongodb+srv://MdiskDb:MdiskDb@cluster0.lmirmtn.mongodb.net/?retr
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = ""  
 AUTHORIZED_CHATS = "-1001531531268"   
-SUDO_USERS = "5911867087"  
-STATUS_LIMIT = "3"
+SUDO_USERS = ""  
+STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "120"
@@ -48,12 +48,12 @@ EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = ""
 LEECH_REMOVE_UNWANTED = ""
-DUMP_CHAT_ID = "-1001953036140"
+DUMP_CHAT_ID = "-1001881464900"
 USER_DUMP = "True"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "1800"
-BASE_URL = "https://firststeprobot.herokuapp.com"
+BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
