--- a/config.env
+++ b/config.env
@@ -12,7 +12,7 @@ UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = "mongodb+srv://MdiskDb:MdiskDb@cluster0.lmirmtn.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://bot:bot@cluster0.nvvadiz.mongodb.net/?retryWrites=true&w=majority"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = ""  
 AUTHORIZED_CHATS = "-1001531531268"   
